# squirrel3

./: CMakeLists.txt
include/: CMakeLists.txt
sq/: CMakeLists.txt
sqstdlib/: CMakeLists.txt
squirrel/: CMakeLists.txt  sqapi.cpp  sqvm.cpp
