CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
    SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /MTd")
    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")

    SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /MT")
    SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
ENDIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")

ADD_SUBDIRECTORY(squirrel)
ADD_SUBDIRECTORY(sqstdlib)
ADD_SUBDIRECTORY(sq)
ADD_SUBDIRECTORY(include)
